--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.2.1",
+    "@types/nodemailer": "^7.0.1",
     "@types/stripe": "^8.0.417",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
@@ -31,6 +32,7 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "stripe": "^18.4.0"
   }
 }
