--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-soullinkai-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon --config nodemon.json",
     "build": "tsc",
     "start": "node dist/server.js"
   },
